add google fonts poppins

--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 
+    <!-- google fonts link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+
     <!-- External CSS -->
     <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
-    
+    <main>
+        <h1>Welcome To</h1>
+        <h1><span>Sayeed Hasan</span> World!</h1>
+    </main>
 </body>
 </html>
