--- a/index.html
+++ b/index.html
@@ -17,8 +17,23 @@
 </head>
 <body>
     <main>
-        <h1>Welcome To</h1>
-        <h1><span>Sayeed Hasan</span> World!</h1>
+        <section class ="top-banner">
+
+            <div class="half-width">
+                <h1>Welcome To</h1>
+                <h1><span>Sayeed Hasan</span> World!</h1>
+
+                <h3>World-class professional web dev</h3>
+                <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+
+                <a class="link-button" href="http://" target="_blank">HIRE ME</a>
+            </div>
+
+            <div class="half-width">
+                <img src="images/sayeed.png" alt="">
+            </div> 
+
+        </section>
     </main>
 </body>
 </html>
