dream-big section added

--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
             <div class="half-width">
                 <h1>Welcome To</h1>
                 <h1><span>Sayeed Hasan</span> World!</h1>
-
                 <h3>World-class professional web dev</h3>
                 <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-
                 <a class="link-button" href="http://" target="_blank">HIRE ME</a>
             </div>
 
@@ -33,6 +31,19 @@
                 <img src="images/sayeed.png" alt="">
             </div> 
 
+        </section>
+
+
+        <section class="dream-big">
+            <div class="half-width">
+                <img src="images/sayeed2.png" alt="">
+            </div>
+            <div class="half-width">
+                <h1>Dream Big</h1>
+                <h3>Become a web developer</h3>
+                <p class="dream-big-paragraph">I already learned the basic html and css. i can build any simple website. i can even tech my friend how to make simple website. my goal is to build 3 website and learn advanced topics.</p>
+                <a href="#" class="link-button">DOWNLOAD RESUME</a>
+            </div>
         </section>
     </main>
 </body>
