--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </head>
 <body>
     <main>
-        <section class ="top-banner">
+        <!-- top-banner section -->
+        <section class ="top-banner flexible-container">
 
             <div class="half-width">
                 <h1>Welcome To</h1>
@@ -34,17 +35,44 @@
         </section>
 
 
-        <section class="dream-big">
+        <!-- dream-big section -->
+        <section class="dream-big flexible-container">
+
             <div class="half-width">
                 <img src="images/sayeed2.png" alt="">
             </div>
+
             <div class="half-width">
                 <h1>Dream Big</h1>
                 <h3>Become a web developer</h3>
                 <p class="dream-big-paragraph">I already learned the basic html and css. i can build any simple website. i can even tech my friend how to make simple website. my goal is to build 3 website and learn advanced topics.</p>
                 <a href="#" class="link-button">DOWNLOAD RESUME</a>
             </div>
+
         </section>
+
+
+        <!-- experience section -->
+        <section class="experience-area">
+            <h1>Experiences</h1>
+
+            <div class="flexible-container">
+                <div class="experience-item" id="full-stack">
+                    <h2>Full Stack Web Developer</h2>
+                    <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+                    <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+                </div>
+                <div class="experience-item" id="web-dev">
+                    <h2>Baby Web Developer</h2>
+                    <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
+                    <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+        </footer>
     </main>
 </body>
 </html>
